GNOME Bugzilla – Bug 647244
Toggling the 'Deletable' option under the general tab of window properties causes segmentation fault
Last modified: 2011-04-09 05:09:02 UTC
Toggling the 'Deletable' option under the general tab of window properties causes segmentation fault in version 3.10.0
Thanks for reporting this (I found that focus-on-map and urgency-hint and I think some others were also crashing). The issue is fixed now in GTK+ and should be available in the next bugfix release. commit e21d72cf3a7af18284ea23e7ad9d3acd2327ed08 Author: Tristan Van Berkom <tristan.van.berkom@gmail.com> Date: Sat Apr 9 01:55:50 2011 +0900 Fix some crashes caused by unimplemented functions in GdkOffscreenWindow These crashes happen when accessing GtkWindow properties and the GdkWindow is an offscreen (fixes https://bugzilla.gnome.org/show_bug.cgi?id=647244)