Fix some crashes caused by unimplemented functions in GdkOffscreenWindow

These crashes happen when accessing GtkWindow properties and the
GdkWindow is an offscreen (fixes https://bugzilla.gnome.org/show_bug.cgi?id=647244)